CSS fixes for Heatmap Calendar plugin dark mode

--- a/.obsidian/snippets/trackers.css
+++ b/.obsidian/snippets/trackers.css
@@ -15,7 +15,7 @@ body {
 /* HEATMAPS */
 
 /* Change background color of boxes */
-.markdown-preview-view .heatmap-calendar-boxes li {
+.markdown-preview-view .heatmap-calendar-boxes .isEmpty {
   background-color: var(--background-modifier-border);
 }
 
