--- a/Primary Theme/.obsidian/snippets/trackers.css
+++ b/Primary Theme/.obsidian/snippets/trackers.css
@@ -23,9 +23,11 @@
 
 /* Change background color of boxes */
 .markdown-preview-view .heatmap-calendar-boxes li {
-  background-color: var(--background-secondary);
   border: 1px solid var(--background-primary);
-  border-radius: 3px;
+  border-radius: 2px;
+}
+.markdown-preview-view .heatmap-calendar-boxes .isEmpty {
+  background-color: var(--background-secondary) !important;
 }
 
 /* Hide year and days */
